[package]
name = "wasm_ecs"
version = "0.1.0"
authors = ["thunderseethe"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"

[[bin]]
name = "server"

[[bin]]
name = "main"

[workspace]
members = ["interface"]
exclude = ["mods/", "bevy/"]

[build-dependencies]
which = "4.0.2"

[dependencies]
anyhow = "1.0.37"
crossbeam = "0.8"
wasmtime = "0.25.0"
wasmtime-wasi = "0.25.0"
wasi-cap-std-sync = "0.25.0"
uuid = { version = "0.8", features = ["v4"] }

[dependencies.bevy]
path = "./bevy"
version = "0.4"