[package]
name = "interface"
version = "0.1.0"
authors = ["thunderseethe <thunderseethe.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.bevy_input]
path = "../bevy/crates/bevy_input"
version = "0.4"
